--- a/index_clone.html
+++ b/index_clone.html
@@ -20,6 +20,13 @@
                 <button class="Button">Abre putaa</button> <!-- botão para enviar as inf. -->
             </div>
         </div>
+        <footer class="Footer-content">
+            <span class="Creater">
+                <p class="Socials-links">GitHub | Linkedin</p>
+                © 2022 LoginSystem-App · Construido por 
+                <strong class="Creater-name">LEAL, Matheus Ávila Rechinelli</strong>
+            </span>
+        </footer>
 
     </body>
 </html>
