--- a/index_clone.html
+++ b/index_clone.html
@@ -10,6 +10,7 @@
     </head>
 
     <body class="Body-content">
+        <a href="https://github.com/MatheusRechinelli"></a>
         <div class="Login-content">
             <h1>Teste</h1>
             <h2 class="title">Que foguinho aiai</h2> <!-- Titulo da Página -->
@@ -20,11 +21,15 @@
                 <button class="Button">Abre putaa</button> <!-- botão para enviar as inf. -->
             </div>
         </div>
-        <footer class="Footer-content">
-            <span class="Creater">
-                <p class="Socials-links">GitHub | Linkedin</p>
+        <footer class="Footer-content"> <!-- Rodapé -->
+            <span class="Creater"> <!-- Conteiner da criação -->
+                <p class="Socials-links">
+                    <a href="https://github.com/MatheusRechinelli" class="Git"> GitHub </a>
+                    |
+                    <a href="https://www.linkedin.com/in/matheus-rechinelli/" class="Linked"> Linkedin </a>
+                </p>
                 © 2022 LoginSystem-App · Construido por 
-                <strong class="Creater-name">LEAL, Matheus Ávila Rechinelli</strong>
+                <strong class="Creater-name">LEAL, Matheus Ávila Rechinelli.</strong>
             </span>
         </footer>
 
