--- a/index_clone.html
+++ b/index_clone.html
@@ -24,9 +24,9 @@
         <footer class="Footer-content"> <!-- Rodapé -->
             <span class="Creater"> <!-- Conteiner da criação -->
                 <p class="Socials-links">
-                    <a href="https://github.com/MatheusRechinelli" class="Git"> GitHub </a>
+                    <a href="https://github.com/MatheusRechinelli" target="_blank" class="Git">GitHub</a> <!-- Link para page -->
                     |
-                    <a href="https://www.linkedin.com/in/matheus-rechinelli/" class="Linked"> Linkedin </a>
+                    <a href="https://www.linkedin.com/in/matheus-rechinelli/" target="_blank"  class="Linked">Linkedin</a> <!-- Pesquisar o que é _blank -->
                 </p>
                 © 2022 LoginSystem-App · Construido por 
                 <strong class="Creater-name">LEAL, Matheus Ávila Rechinelli.</strong>
